# vendor-api-integration-engine

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: currency_logic.yaml  quantity_rules.yaml  region_mapping.yaml  transaction_types.yaml
docs/: architecture.md  configuration.md
scripts/: seed_config.py
src/api/: main.py  middleware.py  routes.py
src/config/: loader.py  settings.py
src/models/: idoc_models.py  request_models.py  response_models.py
src/services/: audit_logger.py  duplicate_checker.py  idoc_generator.py
src/transformers/: currency_engine.py  field_mapper.py  product_classifier.py
src/utils/: encoding.py  feature_flags.py
src/validators/: business_rules.py  composite_key.py  schema_validator.py
tests/: conftest.py  test_api.py  test_idoc_generator.py  test_integration.py  test_transformers.py  test_validators.py
